@@ -11,6 +11,8 @@
 \alias{MethodWithNextWithTrace-class}
 \alias{genericFunctionWithTrace-class}
 \alias{groupGenericFunctionWithTrace-class}
+\alias{derivedDefaultMethodWithTrace-class}
+\alias{nonstandardGenericWithTrace-class}
 %% private
 \alias{.untracedFunction}
 \alias{.makeTracedFunction}
